ssd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ssd
spec:
  containers:
  - name: nginx
    image: nginx
  nodeSelector:
    disktype: ssd
